# yulmok

./: CMakeLists.txt  TODO.md
code/: CMakeLists.txt
code/client/: CMakeLists.txt  framework.cpp  framework.h  main.cpp  pch.h
code/common/: CMakeLists.txt  console_util.h  dimension_coord.h  group.h
code/omok/: CMakeLists.txt  board.h  coord.h  hint.h  player.cpp  player.h  rule.cpp  rule.h
