set(target main)

make_executable(${target} "CONSOLE")

add_pch(${target} pch.cpp pch.h) 

add_sources(${target}
	"Source Files"
	"main.cpp"
)

add_sources(${target}
	"Framework"
	"Framework.cpp"
	"Framework.h"
)

add_sources(${target}
	"Header Files"
)

add_and_link_dependency(${target} common)

target_link_libraries(${target}
	PUBLIC
		${WINLIBS}
)
